# fashion-image-search

./: .env.example  .gitignore  README.md  fashion_eval.py  pyproject.toml
app/: __init__.py  config.py  db.py  eval_cli.py  library.py  logging_utils.py  main.py  models.py  parsing.py  repository.py  services.py
eval/: README.md  __init__.py  evaluate.py
eval/dataset/: README.md  examples_labels.jsonl  starter_labels.jsonl
eval/results/: examples_summary.md
tests/: conftest.py
tests/e2e/: test_app_smoke.py
tests/integration/: test_db_init.py  test_filter_behavior.py  test_upload_flow.py
tests/unit/: test_models.py  test_parsing.py
